pipelines/simple_canary/k8s_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: application
  labels:
    name: application
spec:
  replicas: 1
  template:
    metadata:
      name: application
      labels:
        app: application
        env: Production
    spec:
      containers:
      - name: application
        image: image_source
        imagePullPolicy: Always
        resources:
          requests:
            memory: "125Mi"
            cpu: "100m"
          limits:
            memory: "1G"
            cpu: "1"
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
          timeoutSeconds: 120
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 60
          timeoutSeconds: 120
          successThreshold: 1
          failureThreshold: 10
