pipelines/simple_canary/k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: application
  name: application
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: application
  type: NodePort
