pipelines/simple_canary/k8s_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: application
  annotations:
    configuration.konghq.com: config
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
